# stdformat

./: .gitignore  CMakeLists.txt  README.md  SIGMA
include/: Prolog.hh  _Config.hh
python/: stdformat  stdformat_opt  stdformat_vers1  stdformat_vers3
scripts/: debug.sh  release.sh
src/: Prolog.cc  main.cc
src/modules/: proj.cc  proj.hh
tests/app/: planet.cc
